Set flags for cgroup support in JRE